--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,7 @@
   "functions": [
     {
       "source": "functions",
+      "runtime": "nodejs22",
       "codebase": "default",
       "ignore": [
         "node_modules",
