--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,7 @@
 {
   "hosting": {
     "public": "public",
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "app"
-      }
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "functions": [
     {
